<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges</string>
    <string name="access_paid_features_msg">Check out <a href="%1$s">the user guide</a> to learn how to access the paid features</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="activate_via_qr_code">Activate via QR code</string>
    <string name="active_connections">Active connections</string>
    <string name="active_vpn_detected">Active VPN detected</string>
    <string name="add_action">Add</string>
    <string name="add_to_fw_whitelist">Add to firewall whitelist</string>
    <string name="all_interfaces">All interfaces</string>
    <string name="allow">Allow</string>
    <string name="allowed_connection_filter">Allowed</string>
    <string name="always">Always</string>
    <string name="android_app_info">The Android system</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_key">API key</string>
    <string name="api_key_discard_confirm">Do you really want to discard the current API key and generate a new one?</string>
    <string name="app">App</string>
    <string name="app_and_proto">%1$s (%2$s)</string>
    <string name="app_blocked">App blocked</string>
    <string name="app_blocked_info">The %1$s app has been blocked by the firewall</string>
    <string name="app_details">App details</string>
    <string name="app_info">App info</string>
    <string name="app_intro_back_button">Back</string>
    <string name="app_intro_done_button">Done</string>
    <string name="app_intro_firewall_msg">With the integrated <a href="%1$s">Firewall</a>" you can easily block Internet access to individual apps, domains and countries

Combine this with the built-in traffic visibility to get the ultimate tool to protect your privacy"</string>
    <string name="app_intro_geolocation_msg">"PCAPdroid can query a local database to determine the country of a remote server

You must first download the geolocation database from the app settings"</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_malware_detection">Enhance the security of your device with the <a href="%1$s">malware detection</a>" feature

By using up-to-date blacklists, it can detect, block and alert malicious connections in real-time"</string>
    <string name="app_intro_next_button">Next</string>
    <string name="app_language">App language</string>
    <string name="app_log">Log</string>
    <string name="app_name">Name</string>
    <string name="apps">Apps</string>
    <string name="block">Block…</string>
    <string name="block_new_apps">Block newly installed apps</string>
    <string name="block_private_dns">Block private DNS</string>
    <string name="block_private_dns_summary">Detect and possibly block private DNS to inspect DNS traffic. Disabling this can hinder traffic analysis</string>
    <string name="block_quick">Block QUIC</string>
    <string name="bytes_rcvd">Bytes received</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="capture_interface">Capture interface</string>
    <string name="capture_prefs">Capture</string>
    <string name="control_permissions">Control permissions</string>
    <string name="control_permissions_summary">Check which apps are allowed to control the PCAPdroid capture</string>
    <string name="copy_action">Copy…</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="country">Country</string>
    <string name="decrypt_action">Decrypt…</string>
    <string name="decrypt_pcap_file">Decrypt PCAP/Pcapng file…</string>
    <string name="decryption_rules">Decryption rules</string>
    <string name="default_collector_ip">127.0.0.1</string>
    <string name="default_collector_port">1234</string>
    <string name="display_as_text">Display as text</string>
    <string name="dns_servers">DNS servers</string>
    <string name="dns_servers_summary">Configure the DNS servers to use during the capture</string>
    <string name="dnscrypt_how_to">How to use DoH / DNSCrypt with PCAPdroid</string>
    <string name="donate">Donate</string>
    <string name="dont_decrypt_action">"Don't decrypt…"</string>
    <string name="dump_extensions">PCAPdroid extensions</string>
    <string name="dump_extensions_how_to">How to display the PCAPdroid dump extensions in Wireshark</string>
    <string name="dump_extensions_summary">Extend the packet dump format with additional metadata, such as the app which sent/received a given packet</string>
    <string name="edit_filter">Edit filter</string>
    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to a SOCKS5 proxy</string>
    <string name="export_action">Export</string>
    <string name="filename_prefix">Filename prefix</string>
    <string name="filename_prefix_description">Set the prefix for the files exported by PCAPdroid, e.g. PCAP files</string>
    <string name="firewall">Firewall</string>
    <string name="full_payload">Full payload</string>
    <string name="full_payload_summary">"Show the full connections payload (e.g. the full HTTP request and response). This requires a lot of memory, don't use in the long run"</string>
    <string name="geolocation">Geolocation</string>
    <string name="geolocation_summary">Show country and ASN info by performing offline lookups</string>
    <string name="hide">Hide…</string>
    <string name="hint">Hint</string>
    <string name="host">Host</string>
    <string name="http_server">HTTP server</string>
    <string name="http_server_port">HTTP server port</string>
    <string name="import_action">Import</string>
    <string name="ip_address_or_cidr">IP address / CIDR</string>
    <string name="ip_mode">VPN IP addresses</string>
    <string name="malware_detection">Malware detection</string>
    <string name="malware_detection_learn_more">Learn more about the malware detection feature</string>
    <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists</string>
    <string name="malware_whitelist_action">Whitelist (malware)…</string>
    <string name="mitm_setup_wizard">Mitm setup wizard</string>
    <string name="mitm_wizard_description">Configure the device for the TLS decryption</string>
    <string name="mitmproxy_opts">Additional mitmproxy options</string>
    <string name="mitmproxy_opts_description">Provide additional options for mitmproxy</string>
    <string name="next">Next</string>
    <string name="open_pcap_file">Open PCAP/Pcapng file…</string>
    <string name="open_telegram_group">Telegram group</string>
    <string name="other_prefs">Other</string>
    <string name="paid_features">Paid features</string>
    <string name="password">Password</string>
    <string name="pcapng_format">Pcapng format</string>
    <string name="pcapng_format_summary">Dump packets in the Pcapng dump format, which is more flexible and allows embedding TLS decryption secrets</string>
    <string name="port_mapping">Port mapping</string>
    <string name="port_mapping_summary">Configure port mapping rules to redirect connections to a different host or port</string>
    <string name="previous">Previous</string>
    <string name="protocol">Protocol</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_port">Proxy port</string>
    <string name="receiver_ip_address">Collector IP address</string>
    <string name="receiver_port">Collector port</string>
    <string name="remove_from_fw_whitelist">Remove from firewall whitelist</string>
    <string name="reset">Reset</string>
    <string name="restart_on_disconnection">Restart on disconnection</string>
    <string name="restart_on_disconnection_summary">Automatically restart the capture after being stopped by other VPN apps</string>
    <string name="root_capture">Capture as root</string>
    <string name="root_capture_summary">Allows PCAPdroid to run with other VPN apps</string>
    <string name="save_as_har">Save as HAR</string>
    <string name="save_to_file">Save to file</string>
    <string name="search">Search…</string>
    <string name="security">Security</string>
    <string name="select">Select</string>
    <string name="share">Share</string>
    <string name="socks5_auth">SOCKS5 authentication</string>
    <string name="socks5_auth_summary">Authenticate to the proxy via username and password</string>
    <string name="socks5_proxy">SOCKS5</string>
    <string name="socks5_redirection">SOCKS5 redirection</string>
    <string name="socks5_summary">Configure the redirection to a SOCKS5 proxy</string>
    <string name="sort_by">Sort by</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="start_at_boot_summary">Auto-starts capture after boot</string>
    <string name="start_button">Start</string>
    <string name="stats">Stats</string>
    <string name="stop_button">Stop</string>
    <string name="string_http_request">HTTP request</string>
    <string name="string_http_response">HTTP response</string>
    <string name="tcp_udp_exporter">TCP/UDP exporter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tls_decryption">TLS decryption</string>
    <string name="tls_decryption_summary">Decrypt the SSL/TLS traffic by performing mitm. This may now work with some apps, check out the user guide</string>
    <string name="total_bytes">Total bytes</string>
    <string name="traffic_inspection">Traffic inspection</string>
    <string name="unblock">Unblock…</string>
    <string name="unblock_permanently">Unblock permanently</string>
    <string name="user_guide">User guide</string>
    <string name="username">Username</string>
    <string name="vpn_exemptions">VPN exemptions</string>
    <string name="vpn_exemptions_summary">Exempt some apps from the VPN connection. Their traffic will not be monitored</string>
    <string name="whitelist_mode">Whitelist mode</string>
</resources>