<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_help" android:id="@id/show_hint" android:orderInCategory="10" android:title="@string/hint" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_add" android:orderInCategory="15" android:title="@string/add_action" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/add_app" android:visible="false" android:title="@string/app" />
            <item android:id="@id/add_host" android:visible="false" android:title="@string/host" />
            <item android:id="@id/add_ip" android:visible="false" android:title="@string/ip_address_or_cidr" />
            <item android:id="@id/add_proto" android:visible="false" android:title="@string/protocol" />
            <item android:id="@id/add_country" android:visible="false" android:title="@string/country" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_file_export" android:id="@id/action_export" android:orderInCategory="18" android:title="@string/export_action" app:showAsAction="never" />
    <item android:icon="@drawable/ic_file_import" android:id="@id/action_import" android:orderInCategory="19" android:title="@string/import_action" app:showAsAction="never" />
    <item android:icon="@drawable/ic_content_copy" android:id="@id/copy_to_clipboard" android:orderInCategory="20" android:title="@string/copy_to_clipboard" app:showAsAction="never" />
    <item android:icon="@drawable/ic_share" android:id="@id/share" android:orderInCategory="30" android:title="@string/share" app:showAsAction="never" />
</menu>