<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/select_connection" android:orderInCategory="0" android:title="@string/select" />
    <item android:title="@string/hide">
        <menu>
            <item android:id="@id/hide_app" android:visible="false" android:title="" />
            <item android:id="@id/hide_ip" android:title="" />
            <item android:id="@id/hide_host" android:visible="false" android:title="" />
            <item android:id="@id/hide_domain" android:visible="false" android:title="" />
            <item android:id="@id/hide_proto" android:title="" />
            <item android:id="@id/hide_country" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/block_menu" android:title="@string/block">
        <menu>
            <item android:id="@id/block_app" android:visible="false" android:title="" />
            <item android:id="@id/block_ip" android:title="" />
            <item android:id="@id/block_host" android:visible="false" android:title="" />
            <item android:id="@id/block_domain" android:visible="false" android:title="" />
            <item android:id="@id/block_country" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/unblock_menu" android:title="@string/unblock">
        <menu>
            <item android:id="@id/unblock_app" android:visible="false" android:title="">
                <menu>
                    <item android:id="@id/unblock_app_permanently" android:title="@string/unblock_permanently" />
                    <item android:id="@id/unblock_app_10m" android:title="" />
                    <item android:id="@id/unblock_app_1h" android:title="" />
                    <item android:id="@id/unblock_app_8h" android:title="" />
                </menu>
            </item>
            <item android:id="@id/unblock_ip" android:title="" />
            <item android:id="@id/unblock_host" android:visible="false" android:title="" />
            <item android:id="@id/unblock_domain" android:visible="false" android:title="" />
            <item android:id="@id/unblock_country" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/add_to_fw_whitelist" android:visible="false" android:title="@string/add_to_fw_whitelist" />
    <item android:id="@id/remove_from_fw_whitelist" android:visible="false" android:title="@string/remove_from_fw_whitelist" />
    <item android:title="@string/search">
        <menu>
            <item android:id="@id/search_app" android:title="" />
            <item android:id="@id/search_ip" android:title="" />
            <item android:id="@id/search_host" android:visible="false" android:title="" />
            <item android:id="@id/search_proto" android:title="" />
        </menu>
    </item>
    <item android:title="@string/copy_action">
        <menu>
            <item android:id="@id/copy_ip" android:title="" />
            <item android:id="@id/copy_host" android:visible="false" android:title="" />
            <item android:id="@id/copy_url" android:visible="false" android:title="" />
            <item android:id="@id/copy_http_request" android:visible="false" android:title="@string/string_http_request" />
            <item android:id="@id/copy_http_response" android:visible="false" android:title="@string/string_http_response" />
        </menu>
    </item>
    <item android:id="@id/decrypt_menu" android:title="@string/decrypt_action">
        <menu>
            <item android:id="@id/dec_add_app" android:visible="false" android:title="" />
            <item android:id="@id/dec_add_ip" android:visible="false" android:title="" />
            <item android:id="@id/dec_add_host" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/dont_decrypt_menu" android:title="@string/dont_decrypt_action">
        <menu>
            <item android:id="@id/dec_rem_app" android:visible="false" android:title="" />
            <item android:id="@id/dec_rem_ip" android:visible="false" android:title="" />
            <item android:id="@id/dec_rem_host" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/mw_whitelist_menu" android:title="@string/malware_whitelist_action">
        <menu>
            <item android:id="@id/mw_whitelist_app" android:visible="false" android:title="" />
            <item android:id="@id/mw_whitelist_ip" android:visible="false" android:title="" />
            <item android:id="@id/mw_whitelist_host" android:visible="false" android:title="" />
        </menu>
    </item>
    <item android:id="@id/open_app_details" android:title="@string/app_details" />
</menu>