<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_navigate_before" android:id="@id/navigate_before" android:orderInCategory="10" android:title="@string/previous" app:showAsAction="always" />
    <item android:icon="@drawable/ic_navigate_next" android:id="@id/navigate_next" android:orderInCategory="20" android:title="@string/next" app:showAsAction="always" />
    <item android:icon="@drawable/ic_short_text" android:id="@id/display_as" android:visible="false" android:orderInCategory="30" android:title="@string/display_as_text" app:showAsAction="never" />
    <item android:id="@id/save_as_har" android:orderInCategory="40" android:title="@string/save_as_har" app:showAsAction="never" />
</menu>